Replaced SlideToActView with button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,6 @@
     <string name="disclaimerPointFour">4. Savage Blocker falls under the GPLv3 license. No liability caused by the misuse or malfunctioning of the Savage Blocker application shall be placed on the developer. </string>
     <string name="disclaimerButton">I Accept These Risks</string>
     <string name="timerColon">:</string>
-    <string name="sliderCallToAction">Swipe to Set Block</string>
     <string name="confirmationPopupTitle">Block Phone For</string>
     <string name="cancelBlock">Cancel block</string>
     <string name="confirmBlock">Confirm block</string>
@@ -34,4 +33,5 @@
     <string name="secondsToolTip">Seconds</string>
     <string name="blockerImageDescription">Savage Blocker skull</string>
     <string name="startMenuTitle">Block your device</string>
+    <string name="confirmButtonText">Confirm</string>
 </resources>
