Fixed foreground service not stopping and changed wording in disclaimer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="overlay"><u>Click to enable Draw Overlays</u>.</string>
     <string name="usage"><u>Click to enable Permit Usage</u>.</string>
     <string name="disclaimerTitle">Disclaimer</string>
-    <string name="disclaimerPointOne">1. It is impossible to use any other applications while blocking your device with Savage Blocker. Once the block has started, only answering phone calls through the notification bar is possible. You can only make emergency calls if your lock screen has the Emergency Call button enabled. The app has not been officially tested on wearable or tablet devices and may contain bugs in general.</string>
-    <string name="disclaimerPointTwo">2. If the block timer has not finished, the only way to unblock your device is by connecting the device via USB to a PC and using adb commands. This requires you to enable Developer Options and enable USB debugging as well as setting your default USB preference to File Transfer.</string>
+    <string name="disclaimerPointOne">1. It is impossible to use non-whitelisted applications while blocking your device with Savage Blocker. The app has not been officially tested on wearable or tablet devices and may contain bugs in general.</string>
+    <string name="disclaimerPointTwo">2. If the block timer has not finished, the only way to unblock your device is by enabling tap to unlock and clicking the screen a certain number of times.</string>
     <string name="disclaimerPointThree">3. The app requires the \'Can Draw Overlays\' and \'Permit Usage Access\' permissions for the block overlay to function. The usage data will only be used by the app locally when the block is turned on. The app has zero analytics or telemetry.</string>
     <string name="disclaimerPointFour">4. Savage Blocker falls under the GPLv3 license. No liability caused by the misuse or malfunctioning of the Savage Blocker application shall be placed on the developer. </string>
     <string name="disclaimerButton">I Accept These Risks</string>
